--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "element-plus": "^2.10.2",
+    "three": "^0.178.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
