--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "element-plus": "^2.10.2",
+    "potree-core": "^2.0.11",
+    "three": "^0.178.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
